captions for photos, changed header color

--- a/lectures/jan29/intro-css-gallery/index.html
+++ b/lectures/jan29/intro-css-gallery/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <title>Test Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Photo Gallery</title>
+  </head>
+  <body>
     <header>
-        <h1>My Photo Gallery</h1>
-        <p>
-            Also feel free to customize the fonts, colors, etc. 
-            The goal of this exercise is to practice selecting HTML elements
-        </p>
+      <h1>My Photo Gallery</h1>
     </header>
     <main>
-        <section>
-            <img src="https://picsum.photos/300/200?num=1" alt="image description" />
-            <p>Some caption for photo 1</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=2" alt="image description" />
-            <p>Some caption for photo 2</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=3" alt="image description" />
-            <p>Some caption for photo 3</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=4" alt="image description" />
-            <p>Some caption for photo 4</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=5" alt="image description" />
-            <p>Some caption for photo 5</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=6" alt="image description" />
-            <p>Some caption for photo 6</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=7" alt="image description" />
-            <p>Some caption for photo 7</p>
-        </section>
-        <section>
-            <img src="https://picsum.photos/300/200?num=8" alt="image description" />
-            <p>Some caption for photo 8</p>
-        </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=1"
+          alt="image description"
+        />
+        <p>Sept. 26</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=2"
+          alt="image description"
+        />
+        <p>Oct. 4</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=3"
+          alt="image description"
+        />
+        <p>Oct. 28</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=4"
+          alt="image description"
+        />
+        <p>July 13</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=5"
+          alt="image description"
+        />
+        <p>March 30</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=6"
+          alt="image description"
+        />
+        <p>April 23</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=7"
+          alt="image description"
+        />
+        <p>June 9</p>
+      </section>
+      <section>
+        <img
+          src="https://picsum.photos/300/200?num=8"
+          alt="image description"
+        />
+        <p>Aug. 15</p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
