--- a/lectures/lecture07/03-css-grid/layout.html
+++ b/lectures/lecture07/03-css-grid/layout.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Grid Demo</title>
 
-    <link rel="stylesheet" href="./style.css" />
-</head>
+    <!-- <link rel="stylesheet" href="./style-verbose.css" /> -->
+    <link rel="stylesheet" href="./style-simplified.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header class="item">header</header>
+      <header class="item">header</header>
 
-        <nav class="item">navigation</nav>
+      <nav class="item">navigation</nav>
 
-        <main class="item">main</main>
+      <main class="item">main</main>
 
-        <section class="item">sidebar</section>
+      <section class="item">sidebar</section>
 
-        <aside class="item">ads</aside>
+      <aside class="item">ads :(</aside>
 
-        <footer class="item">footer</footer>
+      <footer class="item">footer</footer>
     </div>
-</body>
-
+  </body>
 </html>
