--- a/lectures/lecture07/03-css-grid/layout.html
+++ b/lectures/lecture07/03-css-grid/layout.html
@@ -6,7 +6,7 @@
     <title>CSS Grid Demo</title>
 
     <!-- <link rel="stylesheet" href="./style-verbose.css" /> -->
-    <link rel="stylesheet" href="./style-simplified.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
