--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Kate's Homepage</h1>
     <h2>Tutorials</h2>
     <a href="tutorials/tutorial01/index.html">Tutorial 1</a>
+    <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
   </body>
 </html>
