made web links funstional

--- a/tutorials/tutorial02/index.html
+++ b/tutorials/tutorial02/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <img src="tutorials/tutorial02/cssDinerScreenShot.png" />
-    <a href="tutorials/tutorial02/02-box-model/index.html">Box Model</a>
-    <a href="tutorials/tutorial02/03-fonts/index.html">Fonts</a>
-    <a href="tutorials/tutorial02/04-flex/index.html">Flex</a>
-    <a href="tutorials/tutorial02/05-navbar/index.html">Navbar</a>
-    <a href="tutorials/tutorial02/06-grid/index.html">Grid</a>
-    <a href="tutorials/tutorial02/07-tacottemple/index.html">Taco Temple</a>
+    <a href="02-box-model/index.html">Box Model</a>
+    <a href="03-fonts/index.html">Fonts</a>
+    <a href="04-flex/index.html">Flex</a>
+    <a href="05-navbar/index.html">Navbar</a>
+    <a href="06-grid/index.html">Grid</a>
+    <a href="07-tacotemple/index.html">Taco Temple</a>
+    <a href="Diner/index.html">Diner</a>
   </body>
 </html>
