--- a/tutorials/tutorial01/index.html
+++ b/tutorials/tutorial01/index.html
@@ -17,9 +17,9 @@
       <p>Here is some text for the homepage.</p>
 
       <section class="photo-section">
-        <img src="images/daisy.jpg" />
-        <img src="images/poppies.jpg" />
-        <img src="images/purple.jpg" />
+        <img src="images/daisy.jpg" alt="an image of a field of daisies." />
+        <img src="images/poppies.jpg" alt="an image of popy flowers" />
+        <img src="images/purple.jpg" alt="an image of purple flowers" />
       </section>
     </main>
   </body>
