--- a/tutorials/tutorial03/index.html
+++ b/tutorials/tutorial03/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial 4: Tailwind</title>
-</head>
-
-<body></body>
-
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kate's Homepage</title>
+  </head>
+  <body>
+    <h1>Kate's Homepage</h1>
+    <h2>Tutorials</h2>
+    <a href="tutorials/tutorial01/index.html">Tutorial 1</a>
+    <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
+  </body>
 </html>
