--- a/tutorials/tutorial03/index.html
+++ b/tutorials/tutorial03/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tutorial 3: Tailwind</title>
-</head>
+    <link rel="stylesheet" href="./public/output.css" />
+  </head>
 
-<body></body>
+  <body>
+    <div
+      class="font-Poppins flex flex-col justify-center items-center min-h-screen"
+    >
+      <!-- top-level container (for centering the card)-->
+      <div class="flex flex-col max-w-[350px] shadow-md rounded-md">
+        <!-- card container -->
+        <img
+          class="max-h-56 w-full object-cover rounded-t-md"
+          src="./assets/burger.jpg"
+          alt="burger dish"
+        />
+        <!-- text container-->
+        <div class="p-4">
+          <h1 class="textlg mb-1">Burger Tower</h2>
+          <h2 class="text-sm md-4 text-zinc-600">4.5 / 5 Stars (413 Reviews)</h3>
+          <p class="text-xs mb-2">$$ - American, Burgers</p>
+          <p class="text-xs mb-4 text-zinc-600">Well-known burger franchise serving burgers, fries, and shakes.</p>
 
+          <!-- button container-->
+          <div class="flex gap-x-2">
+            <button class="btn bg-custom-purple">View Website</button>
+            <button class="btn bg-custom-blue">Order Curbside</button>
+          </div>
+          <!-- end button container-->
+        </div>
+        <!-- end text container-->
+      </div>
+      <!-- end card container -->
+    </div>
+    <!-- end top-level container -->
+  </body>
 </html>
