updated main page to be prettier with functional links

--- a/tutorials/tutorial01/index.html
+++ b/tutorials/tutorial01/index.html
@@ -21,6 +21,7 @@
         <img src="images/poppies.jpg" alt="an image of popy flowers" />
         <img src="images/purple.jpg" alt="an image of purple flowers" />
       </section>
+      <a href="index.html" class="button">Back</a>
     </main>
   </body>
 </html>
