added back buttons! yippee!

--- a/tutorials/tutorial01/music.html
+++ b/tutorials/tutorial01/music.html
@@ -38,6 +38,7 @@
           loading="lazy"
         ></iframe>
       </section>
+      <a href="../../index.html" class="button">Back</a>
     </main>
   </body>
 </html>
