--- a/tutorials/tutorial01/videos.html
+++ b/tutorials/tutorial01/videos.html
@@ -36,6 +36,7 @@
         referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen</iframe>
       </section>
+      <a href="../../index.html" class="button">Back</a>
     </main>
   </body>
 </html>
