--- a/tutorials/tutorial02/index.html
+++ b/tutorials/tutorial02/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="../../index.html" class="button">Back</a>
     <a href="02-box-model/index.html">Box Model</a>
     <a href="03-fonts/index.html">Fonts</a>
     <a href="04-flex/index.html">Flex</a>
