--- a/tutorials/tutorial03/index.html
+++ b/tutorials/tutorial03/index.html
@@ -38,5 +38,6 @@
       <!-- end card container -->
     </div>
     <!-- end top-level container -->
+    <a href="../../index.html" class="button">Back</a>
   </body>
 </html>
