--- a/quizzes/quiz01/index.html
+++ b/quizzes/quiz01/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Taco Temple Part 2</title>
@@ -64,7 +64,10 @@
             </p>
             <p>$4.00</p>
           </div>
-          <img src="./images/starters/vege-tray.png" />
+          <img
+            src="./images/starters/vege-tray.png"
+            alt="Photograph of the Mexican Vegetable Tray"
+          />
         </section>
         <section class="card">
           <div class="card-info">
@@ -90,7 +93,7 @@
             <p>Tater Tots Dusted With Chile-Lime Salt (TAJIN)</p>
             <p>$2.00</p>
           </div>
-          <img src="./images/sides/tots.png" />
+          <img src="./images/sides/tots.png" alt="Photograph of tater tots" />
         </section>
         <section class="card">
           <div class="card-info">
@@ -109,7 +112,10 @@
             </p>
             <p>$4.00</p>
           </div>
-          <img src="./images/sides/plantains.png" />
+          <img
+            src="./images/sides/plantains.png"
+            alt="Photograph of plantains"
+          />
         </section>
         <section class="card">
           <div class="card-info">
@@ -142,7 +148,7 @@
           </div>
           <img
             src="./images/tacos/one-taco.png"
-            alt="Image of the one taco box"
+            alt="Photograph of the one taco box"
           />
         </section>
         <section class="card">
