--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="tutorials/tutorial02/index.html">Tuturial 2</a></li>
         <li><a href="tutorials/tutorial03/index.html">Tutorial 3</a></li>
         <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
+        <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
       </ul>
     </nav>
 
