--- a/homework/hw02/index.html
+++ b/homework/hw02/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid Practice</title>
-    <link rel="stylesheet" href="./grid-styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <main class="grid-container">
-      <div class="item-1">Navbar</div>
-      <div class="item-2">Main Panel</div>
-      <div class="item-3">Side Panel</div>
+    <section id="navbar">
+      <p>Navbar</p>
+    </section>
+    <main>
+      <section id="content">
+        <div id="stories"><p>Stories</p></div>
+        <div id="post"><p>Post</p></div>
+      </section>
+      <section id="suggested">
+        <p>Suggested</p>
+      </section>
     </main>
   </body>
 </html>
