--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="tutorials/tutorial03/index.html">Tutorial 3</a></li>
         <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
         <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
+        <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
       </ul>
     </nav>
 
