--- a/homework/hw02/index.html
+++ b/homework/hw02/index.html
@@ -14,7 +14,7 @@
     <header id="navbar">
       <h2>Photo App</h2>
       <nav>
-        <p><a href="#">Alex</a></p>
+        <p><a href="#">Alexis</a></p>
         <p><a href="#" style="color: blue">Sign out</a></p>
         <!--"cheating" with some casual inline styling (my fave)-->
       </nav>
@@ -38,6 +38,10 @@
           <div class="story_post">
             <img src="pfp4.jpeg" alt="pic of friend" class="pfp" />
             <p>Arizona</p>
+          </div>
+          <div class="story_post">
+            <img src="pfp5.jpeg" alt="pic of friend" class="pfp" />
+            <p>Jess</p>
           </div>
           </div>
         </div>
@@ -251,6 +255,9 @@
         <div class="story_post">
           <img src="spfp4.jpeg" alt="pic of friend" class="pfp" />
           <p>Vic</p>
+        <div class="story_post">
+          <img src="spfp5.jpeg" alt="pic of friend" class="pfp" />
+          <p>Brennan</p>
       </section>
     </main>
   </body>
