--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Welcome to My Website!</h1>
 
+    <img src="images/bongocat.gif" alt="a cat dancing" />
+    <img src="images/bearwithmap.jpg" alt="a bear holding a map" />
+
     <nav>
       <ul>
         <li><a href="tutorials/tutorial01/index.html">Tutorial 1</a></li>
@@ -20,9 +23,15 @@
       </ul>
     </nav>
 
-    <audio autoplay loop>
-      <source src="background-music.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
+    <iframe
+      style="border-radius: 12px"
+      src="https://open.spotify.com/embed/album/4wIX07SiESzMbSLCK3qCWQ?utm_source=generator"
+      width="100%"
+      height="352"
+      frameborder="0"
+      allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"
+    ></iframe>
   </body>
 </html>
