fixing contrast issues

--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
 
     <iframe
       style="border-radius: 12px"
-      src="https://open.spotify.com/embed/album/4wIX07SiESzMbSLCK3qCWQ?utm_source=generator"
-      width="100%"
+      src="https://open.spotify.com/embed/playlist/7yDZXnoSYwNBedoFnJkEv5?utm_source=generator"
+      width="45%"
+      height="352"
+      frameborder="0"
+      allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"
+    ></iframe>
+    <iframe
+      style="border-radius: 12px"
+      src="https://open.spotify.com/embed/playlist/4Hdj9LlDELcZUnxkG6ypJS?utm_source=generator"
+      width="45%"
       height="352"
       frameborder="0"
       allowfullscreen=""
