--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to My Website!</h1>
+    <div class="sunset-border">
+      <h1>Welcome to My Website!</h1>
 
-    <img src="images/bongocat.gif" alt="a cat dancing" />
-    <img src="images/bearwithmap.jpg" alt="a bear holding a map" />
+      <img src="images/bongocat.gif" alt="a cat dancing" />
+      <img src="images/bearwithmap.jpg" alt="a bear holding a map" />
 
-    <nav>
-      <ul>
-        <li><a href="tutorials/tutorial01/index.html">Tutorial 1</a></li>
-        <li><a href="tutorials/tutorial02/index.html">Tutorial 2</a></li>
-        <li><a href="tutorials/tutorial03/index.html">Tutorial 3</a></li>
-        <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
-        <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
-        <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="tutorials/tutorial01/index.html">Tutorial 1</a></li>
+          <li><a href="tutorials/tutorial02/index.html">Tutorial 2</a></li>
+          <li><a href="tutorials/tutorial03/index.html">Tutorial 3</a></li>
+          <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
+          <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
+          <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
+        </ul>
+      </nav>
 
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/7yDZXnoSYwNBedoFnJkEv5?utm_source=generator"
-      width="45%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/4Hdj9LlDELcZUnxkG6ypJS?utm_source=generator"
-      width="45%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/playlist/7yDZXnoSYwNBedoFnJkEv5?utm_source=generator"
+        width="45%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/playlist/4Hdj9LlDELcZUnxkG6ypJS?utm_source=generator"
+        width="45%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
   </body>
 </html>
