--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="sunset-border">
+    <div class="rainbow-border">
       <h1>Welcome to My Website!</h1>
 
       <img src="images/bongocat.gif" alt="a cat dancing" />
