--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
           <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
           <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
+          <li><a href="tutorials/tutorial05/index.html">Tutorial 5</a></li>
         </ul>
       </nav>
 
