--- a/tutorials/tutorial05/01-theme-switcher/index.html
+++ b/tutorials/tutorial05/01-theme-switcher/index.html
@@ -7,7 +7,7 @@
     <script src="index.js" defer></script>
   </head>
 
-  <body>
+  <body class="desert">
     <section class="container">
       <header>
         <h1>My Header</h1>
@@ -16,7 +16,7 @@
         <button
           id="default"
           title="Change to 'Default' theme"
-          onclick="changeClass('')"
+          onclick="changeClass('default')"
         >
           Default
         </button>
