--- a/index.html
+++ b/index.html
@@ -22,29 +22,31 @@
           <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
           <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
           <li><a href="tutorials/tutorial05/index.html">Tutorial 5</a></li>
+          <li><a href="tutorials/tutorial06/index.html">Tutorial 6</a></li>
         </ul>
       </nav>
-
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/playlist/7yDZXnoSYwNBedoFnJkEv5?utm_source=generator"
-        width="45%"
-        height="352"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/playlist/4Hdj9LlDELcZUnxkG6ypJS?utm_source=generator"
-        width="45%"
-        height="352"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
+      <div class="music">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/7yDZXnoSYwNBedoFnJkEv5?utm_source=generator"
+          width="45%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/4Hdj9LlDELcZUnxkG6ypJS?utm_source=generator"
+          width="45%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
     </div>
   </body>
 </html>
