--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <body>
     <div class="rainbow-border">
       <h1>Welcome to My Website!</h1>
+      <button id="toggleButton">Toggle Background</button>
+
+      <script>
+        document
+          .getElementById("toggleButton")
+          .addEventListener("click", function () {
+            document.body.classList.toggle("background-active");
+          });
+      </script>
 
       <img src="images/bongocat.gif" alt="a cat dancing" />
       <img src="images/bearwithmap.jpg" alt="a bear holding a map" />
