--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
           <li><a href="tutorials/tutorial03/index.html">Tutorial 3</a></li>
           <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
           <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
-          <li><a href="homework/hw02/index.html">Homework 2: Photo App</a></li>
+          <li><a href="homework/hw02/index.html">Homework 2</a></li>
           <li><a href="tutorials/tutorial05/index.html">Tutorial 5</a></li>
           <li><a href="tutorials/tutorial06/index.html">Tutorial 6</a></li>
+          <li><a href="quizzes/quiz02a/index.html">Quiz 2a</a></li>
         </ul>
       </nav>
       <div class="music">
