quiz 2b commit, may include some straggler classwork from last week as well

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           <li><a href="tutorials/tutorial05/index.html">Tutorial 5</a></li>
           <li><a href="tutorials/tutorial06/index.html">Tutorial 6</a></li>
           <li><a href="quizzes/quiz02a/index.html">Quiz 2a</a></li>
+          <li>
+            <a href="quizzes/quiz02b/task01/index.html">Quiz 2b task01</a>
+          </li>
+          <li>
+            <a href="quizzes/quiz02b/task02/index.html">Quiz 2b task02</a>
+          </li>
         </ul>
       </nav>
       <div class="music">
