--- a/homework/hw03/index.html
+++ b/homework/hw03/index.html
@@ -16,10 +16,7 @@
     </div>
 
     <aside class="fixed top-[100px] left-[63vw] w-70 hidden md:block">
-      <header class="flex gap-4 items-center">
-        <img src="https://picsum.photos/60/60?q=11" class="rounded-full w-16" />
-        <h2 class="font-Comfortaa font-bold text-2xl">gibsonjack</h2>
-      </header>
+      <header class="flex gap-4 items-center"></header>
       <div class="mt-4">
         <p class="text-base text-gray-400 font-bold mb-4">
           Suggestions for you
