--- a/homework/hw03/index.html
+++ b/homework/hw03/index.html
@@ -74,266 +74,8 @@
     >
       <!-- Stories -->
       <header class="flex gap-6 bg-white border p-2 overflow-hidden mb-6">
-        <div class="flex flex-col justify-center items-center">
-          <img
-            src="https://picsum.photos/50/50?q=10"
-            class="rounded-full border-4 border-gray-300"
-          />
-          <p class="text-xs text-gray-500">gouldjennifer</p>
-        </div>
-        <div class="flex flex-col justify-center items-center">
-          <img
-            src="https://picsum.photos/50/50?q=11"
-            class="rounded-full border-4 border-gray-300"
-          />
-          <p class="text-xs text-gray-500">matthew16</p>
-        </div>
-        <div class="flex flex-col justify-center items-center">
-          <img
-            src="https://picsum.photos/50/50?q=12"
-            class="rounded-full border-4 border-gray-300"
-          />
-          <p class="text-xs text-gray-500">sanchezjill</p>
-        </div>
-        <div class="flex flex-col justify-center items-center">
-          <img
-            src="https://picsum.photos/50/50?q=13"
-            class="rounded-full border-4 border-gray-300"
-          />
-          <p class="text-xs text-gray-500">gloria62</p>
-        </div>
-        <div class="flex flex-col justify-center items-center">
-          <img
-            src="https://picsum.photos/50/50?q=14"
-            class="rounded-full border-4 border-gray-300"
-          />
-          <p class="text-xs text-gray-500">jwright</p>
-        </div>
+        <div class="flex flex-col justify-center items-center"></div>
       </header>
-
-      <!-- Post 2 -->
-      <section class="bg-white border mb-10">
-        <div class="p-4 flex justify-between">
-          <h3 class="text-lg font-Comfortaa font-bold">lindseychandler</h3>
-          <button class="icon-button"><i class="fas fa-ellipsis-h"></i></button>
-        </div>
-        <img
-          src="https://picsum.photos/300/200?q=2"
-          alt="placeholder image"
-          width="300"
-          height="300"
-          class="w-full bg-cover"
-        />
-        <div class="p-4">
-          <div class="flex justify-between text-2xl mb-3">
-            <div>
-              <button><i class="far fa-heart"></i></button>
-              <button><i class="far fa-comment"></i></button>
-              <button><i class="far fa-paper-plane"></i></button>
-            </div>
-            <div>
-              <button><i class="far fa-bookmark"></i></button>
-            </div>
-          </div>
-          <p class="font-bold mb-3">30 likes</p>
-          <div class="text-sm mb-3">
-            <p>
-              <strong>gibsonjack</strong>
-              Here is a caption about the photo. Text text text text text text
-              text text text text text text text text text text text...
-              <button class="button">more</button>
-            </p>
-          </div>
-          <p class="text-sm mb-3">
-            <strong>lizzie</strong>
-            Here is a comment text text text text text text text text.
-          </p>
-          <p class="text-sm mb-3">
-            <strong>vanek97</strong>
-            Here is another comment text text text.
-          </p>
-          <p class="uppercase text-gray-500 text-xs">1 day ago</p>
-        </div>
-        <div class="flex justify-between items-center p-3">
-          <div class="flex items-center gap-3 min-w-[80%]">
-            <i class="far fa-smile text-lg"></i>
-            <input
-              type="text"
-              class="min-w-[80%] focus:outline-none"
-              placeholder="Add a comment..."
-            />
-          </div>
-          <button class="text-blue-500 py-2">Post</button>
-        </div>
-      </section>
-
-      <!-- Post 3 -->
-      <section class="bg-white border mb-10">
-        <div class="p-4 flex justify-between">
-          <h3 class="text-lg font-Comfortaa font-bold">brandonmiller</h3>
-          <button class="icon-button"><i class="fas fa-ellipsis-h"></i></button>
-        </div>
-        <img
-          src="https://picsum.photos/300/200?q=3"
-          alt="placeholder image"
-          width="300"
-          height="300"
-          class="w-full bg-cover"
-        />
-        <div class="p-4">
-          <div class="flex justify-between text-2xl mb-3">
-            <div>
-              <button><i class="far fa-heart"></i></button>
-              <button><i class="far fa-comment"></i></button>
-              <button><i class="far fa-paper-plane"></i></button>
-            </div>
-            <div>
-              <button><i class="far fa-bookmark"></i></button>
-            </div>
-          </div>
-          <p class="font-bold mb-3">30 likes</p>
-          <div class="text-sm mb-3">
-            <p>
-              <strong>gibsonjack</strong>
-              Here is a caption about the photo. Text text text text text text
-              text text text text text text text text text text text...
-              <button class="button">more</button>
-            </p>
-          </div>
-          <p class="text-sm mb-3">
-            <strong>lizzie</strong>
-            Here is a comment text text text text text text text text.
-          </p>
-          <p class="text-sm mb-3">
-            <strong>vanek97</strong>
-            Here is another comment text text text.
-          </p>
-          <p class="uppercase text-gray-500 text-xs">1 day ago</p>
-        </div>
-        <div class="flex justify-between items-center p-3">
-          <div class="flex items-center gap-3 min-w-[80%]">
-            <i class="far fa-smile text-lg"></i>
-            <input
-              type="text"
-              class="min-w-[80%] focus:outline-none"
-              placeholder="Add a comment..."
-            />
-          </div>
-          <button class="text-blue-500 py-2">Post</button>
-        </div>
-      </section>
-
-      <!-- Post 4 -->
-      <section class="bg-white border mb-10">
-        <div class="p-4 flex justify-between">
-          <h3 class="text-lg font-Comfortaa font-bold">debramcdaniel</h3>
-          <button class="icon-button"><i class="fas fa-ellipsis-h"></i></button>
-        </div>
-        <img
-          src="https://picsum.photos/300/200?q=4"
-          alt="placeholder image"
-          width="300"
-          height="300"
-          class="w-full bg-cover"
-        />
-        <div class="p-4">
-          <div class="flex justify-between text-2xl mb-3">
-            <div>
-              <button><i class="far fa-heart"></i></button>
-              <button><i class="far fa-comment"></i></button>
-              <button><i class="far fa-paper-plane"></i></button>
-            </div>
-            <div>
-              <button><i class="far fa-bookmark"></i></button>
-            </div>
-          </div>
-          <p class="font-bold mb-3">30 likes</p>
-          <div class="text-sm mb-3">
-            <p>
-              <strong>gibsonjack</strong>
-              Here is a caption about the photo. Text text text text text text
-              text text text text text text text text text text text...
-              <button class="button">more</button>
-            </p>
-          </div>
-          <p class="text-sm mb-3">
-            <strong>lizzie</strong>
-            Here is a comment text text text text text text text text.
-          </p>
-          <p class="text-sm mb-3">
-            <strong>vanek97</strong>
-            Here is another comment text text text.
-          </p>
-          <p class="uppercase text-gray-500 text-xs">1 day ago</p>
-        </div>
-        <div class="flex justify-between items-center p-3">
-          <div class="flex items-center gap-3 min-w-[80%]">
-            <i class="far fa-smile text-lg"></i>
-            <input
-              type="text"
-              class="min-w-[80%] focus:outline-none"
-              placeholder="Add a comment..."
-            />
-          </div>
-          <button class="text-blue-500 py-2">Post</button>
-        </div>
-      </section>
-
-      <!-- Post 5 -->
-      <section class="bg-white border mb-10">
-        <div class="p-4 flex justify-between">
-          <h3 class="text-lg font-Comfortaa font-bold">sharpmargaret</h3>
-          <button class="icon-button"><i class="fas fa-ellipsis-h"></i></button>
-        </div>
-        <img
-          src="https://picsum.photos/300/200?q=5"
-          alt="placeholder image"
-          width="300"
-          height="300"
-          class="w-full bg-cover"
-        />
-        <div class="p-4">
-          <div class="flex justify-between text-2xl mb-3">
-            <div>
-              <button><i class="far fa-heart"></i></button>
-              <button><i class="far fa-comment"></i></button>
-              <button><i class="far fa-paper-plane"></i></button>
-            </div>
-            <div>
-              <button><i class="far fa-bookmark"></i></button>
-            </div>
-          </div>
-          <p class="font-bold mb-3">30 likes</p>
-          <div class="text-sm mb-3">
-            <p>
-              <strong>gibsonjack</strong>
-              Here is a caption about the photo. Text text text text text text
-              text text text text text text text text text text text...
-              <button class="button">more</button>
-            </p>
-          </div>
-          <p class="text-sm mb-3">
-            <strong>lizzie</strong>
-            Here is a comment text text text text text text text text.
-          </p>
-          <p class="text-sm mb-3">
-            <strong>vanek97</strong>
-            Here is another comment text text text.
-          </p>
-          <p class="uppercase text-gray-500 text-xs">1 day ago</p>
-        </div>
-        <div class="flex justify-between items-center p-3">
-          <div class="flex items-center gap-3 min-w-[80%]">
-            <i class="far fa-smile text-lg"></i>
-            <input
-              type="text"
-              class="min-w-[80%] focus:outline-none"
-              placeholder="Add a comment..."
-            />
-          </div>
-          <button class="text-blue-500 py-2">Post</button>
-        </div>
-      </section>
     </main>
   </body>
 </html>
