--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kate's Homepage</title>
   </head>
   <body>
     <div class="rainbow-border">
@@ -39,6 +39,7 @@
           <li>
             <a href="quizzes/quiz02b/task02/index.html">Quiz 2b task02</a>
           </li>
+          <li><a href="homework/homework03/index.html">Homework 3</a></li>
         </ul>
       </nav>
       <div class="music">
