--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li>
             <a href="quizzes/quiz02b/task02/index.html">Quiz 2b task02</a>
           </li>
-          <li><a href="homework/homework03/index.html">Homework 3</a></li>
+          <li><a href="homework/hw03/index.html">Homework 3</a></li>
         </ul>
       </nav>
       <div class="music">
