--- a/homework/hw04/index.html
+++ b/homework/hw04/index.html
@@ -1,22 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Photo App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
 
     <!-- Link to Tailwind generated CSS file -->
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./output.css" />
 
     <!-- Link to React initialization script -->
     <script src="src/index.jsx" type="module" defer></script>
-</head>
+  </head>
 
-<body class="bg-gray-100">
-
+  <body class="bg-gray-100">
     <!-- React App Injected Here -->
     <div id="app"></div>
-
-</body>
-
+  </body>
 </html>
